# yammal-number-machine

./: .gitignore  README.md
cron/: Cargo.toml
cron/src/: main.rs
ynm-blockchain/: Cargo.toml
ynm-blockchain/src/: blockchain.rs  main.rs
ynm-client/: deploy.sh  package-lock.json  package.json
ynm-client/public/: index.html  manifest.json
ynm-client/src/: App.js  Routes.js  api.js  index.js
ynm-client/src/assets/: music-player-override.css
ynm-client/src/assets/track-icons/: trackIcons.js
ynm-client/src/components/: Header.js  Login.js  MusicIcons.js  MusicPlayer.js  Nav.js  Register.js  YammalBox.js
ynm-client/src/pages/: About.js  Authenticate.js  Enjoyer.js  Home.js  Music.js  NotFound.js  Register.js
ynm-client/src/redux/: auth.js  store.js  tracks.js
ynm-client/src/theme/: index.js
ynm-server/: Cargo.toml  README.md  deploy.sh  start-dev.sh
ynm-server/migrations/2021-06-28-104932_enjoyers/: down.sql  up.sql
ynm-server/migrations/2021-07-12-031204_create_tracks/: down.sql  up.sql
ynm-server/src/: connection.rs  db.rs  main.rs  schema.rs
ynm-server/src/db/: models.rs
ynm-server/src/enjoyer/: handler.rs  model.rs  repository.rs  router.rs
ynm-server/src/shared/: helpers.rs
ynm-server/src/track/: handler.rs  model.rs  repository.rs  router.rs
