[package]
name = "cron"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.116"
serde_derive = "1.0.116"
postgres = "0.19.1"
